Added support for private `sessions`

--- a/interface/simulateur.html
+++ b/interface/simulateur.html
@@ -42,6 +42,7 @@
                         <div id=session_content></div>
                     </div>
                 </div>
+                {{ !extra_left }}
             </td>
             <td id="content-td">
                 <div id="tabmain-container" class="tab-container">
