--- a/interface/index.html
+++ b/interface/index.html
@@ -16,6 +16,7 @@
                     <a href="?page=exo"><div class="left_item{{!' current_page' if page == "exo" else ""}}"><div class="left_item_inner">Exercices formatifs</div></div></a>
                     <a href="?page=tp"><div class="left_item{{!' current_page' if page == "tp" else ""}}"><div class="left_item_inner">Travaux pratiques</div></div></a>
                     <a href="?sim=nouveau#tabsmain-simulation"><div class="left_item"><div class="left_item_inner">Simulation libre</div></div></a>
+                    {{ !extra_left }}
                     <div style="height: 100%;"></div>
                 </td>
                 <td id="content-td">
